--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -12,7 +12,59 @@
  * Remove if you prefer to use a CSS library, like Bootstrap
  */
 @import 'components/components';
+.bottom-bar {
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  
+  width: 100%;
+  
+  position: fixed;
 
+  left: 0;
+  bottom: 0;
+  
+  -ms-flex-direction: row;
+  -webkit-flex-direction: row;
+  flex-direction: row;
+
+  -ms-flex-pack: justify;
+  -webkit-justify-content: space-around;
+  justify-content: space-around;
+
+  background-color: rgba(255, 255, 255, 0.4);
+}
+
+.bottom-bar button {
+  width: 40px;
+  height:40px;
+  
+  margin: 8px;
+  
+  border: none;
+  
+  background-color: rgba(60, 120, 216, 0.4);
+  
+  border-radius: 100%;
+  
+  -webkit-transition: background-color 0.1s ease-out;
+  transition: background-color 0.1s ease-out;
+
+  -webkit-tap-highlight-color: transparent;
+}
+
+.bottom-bar button:hover {
+  background-color: rgba(60, 120, 216, 0.8);
+}
+
+.bottom-bar button:focus {
+  background-color: rgba(60, 120, 216, 0.8);
+  outline: 0;
+}
+
+.bottom-bar button:active {
+  background-color: rgba(60, 120, 216, 1.0);
+}
 html,
 body {
   width: 100%;
