--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -71,13 +71,14 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
+  background: lightseagreen;
 }
 
 body {
   position: relative;
   font-family: 'Roboto Condensed', Helvetica, Arial, sans-serif;
   font-weight: 300;
-  background-color: #fff;
+  background-color: lightseagreen;
   box-sizing: border-box;
   min-height: 100%;
 }
